[tool.poetry]
name = "laser"
version = "0.1.0"
description = "bmp to g code parser"
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"
pyinstaller = "^4.5.1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
